--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="synopsis">SYNOPSIS</string>
     <string name="rating">Rating</string>
     <string name="category">Category</string>
+    <string name="duration">Duration</string>
 </resources>
